# VAN-Control

./: .gitignore  192.168.0-metadata.json  README.md
src/: README.md
src/boyue/: start_all_tmux.sh
src/boyue/frontcam/: 12.py  G920_control_view.py  README.md  capture_action5_auto.py  try.py
src/boyue/pathtracker/: hud_final.2.py
src/car_interfaces/: CMakeLists.txt  package.xml
src/car_interfaces/msg/: SurroundingInfoInterface.msg
src/ds_aravis_cli/: CMakeLists.txt  package.xml
src/ds_aravis_cli/src/: ds_aravis_tool.cpp
src/oxts_ntrip/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/oxts_ntrip/config/: ntrip_params.yaml
src/oxts_ntrip/launch/: oxts_ntrip.launch.py
src/oxts_ntrip/scripts/: ntrip_forwarding.py
src/oxts_ntrip/src/: GgaGenerator.cpp
src/uw/: 192.168.0-metadata.json  CMakeLists.txt  package.xml
src/uw/camera_intrinsics/: fl_camera_info.yaml  forward_camera_info.yaml
src/uw/camera_settings/: fl_camera.json  forward_camera.json  fr_camera.json  rl_camera.json  rr_camera.json
src/uw/config/: front_lidar.yaml  oxts_params.yaml  rl_lidar.yaml  rr_lidar.yaml
src/uw/launch/: autonomy.launch.xml  camera.launch.py  camera_intrinsics_cal.launch.xml  devices.launch.xml  main.launch.xml  novatel_driver.launch.py  ouster_driver.launch.py  oxts_driver.launch.py  robot_state_publisher.launch.py
src/uw/rviz/: autonomy_viz.rviz  sensor_viz.rviz
src/uw/scripts/: bag_data.bash  sys_enable_node.py
src/uw/urdf/: etransit.urdf
src/uw_surrounding_info/: package.xml  setup.cfg  setup.py
src/uw_surrounding_info/launch/: surrounding_info.launch.py
src/uw_surrounding_info/resource/: uw_surrounding_info
src/uw_surrounding_info/uw_surrounding_info/: surrounding_info_node.py
