<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oxts_ntrip</name>
  <version>2.0.0</version>
  <description>
    Scripts, nodes, and launch files for sending RTCM data to an OxTS GNSS using NTRIP.
  </description>

  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
