<?xml version="1.0"?>
<package format="3">
  <name>uw</name>
  <version>0.0.0</version>
  <description>
    Packing containing sensor calibration info and a demonstration ROS setup.
  </description>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>ds_dbw_can</exec_depend>
  <exec_depend>dataspeed_can_usb</exec_depend>
  <exec_depend>conti_radar_can</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
