<?xml version="1.0"?>
<package format="3">
  <name>uw_surrounding_info</name>
  <version>0.1.0</version>
  <description>LaserScan fusion node that publishes H-DSAC SurroundingInfoInterface messages.</description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_ros</depend>
  <depend>car_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
